[package]
name = "kzg-poly-commit"
version = "0.1.0"
authors = ["lovesh <lovesh.bond@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7"
serde = "1.0"
serde_derive = "1.0"

[dependencies.amcl_wrapper]
version = "0.2.1"
default-features = false
features = ["bls381"]